cambios de textos y banderas agregadas.

--- a/approach.html
+++ b/approach.html
@@ -31,7 +31,7 @@
         data = {
             es: {
                 home: 'Inicio',
-                mision: 'Mision',
+                mision: 'Misión',
                 approach: 'Enfoque',
                 team: 'Equipo',
                 cases: 'Proyectos'
