--- a/mission.html
+++ b/mission.html
@@ -33,7 +33,7 @@
         data = {
               es: {
                   home: 'Inicio',
-                  mision: 'Mision',
+                  mision: 'Misión',
                   approach: 'Enfoque',
                   team: 'Equipo',
                   cases: 'Proyectos'
@@ -88,7 +88,7 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['title'];
-        var text = "Facilitar la Transformación profunda en las organizaciones, desarrollando capacidades para  alcanzar resultados sustentables de crecimiento, funcionando como sus catalizadores del cambio adaptativo y creando un nuevo futuro."
+        var text = "Facilitar la transformación profunda en las organizaciones, desarrollando capacidades para alcanzar resultados sustentables de crecimiento, funcionando como sus catalizadores del cambio adaptativo y creando un nuevo futuro."
         var firstLine = "Nuestra"
         var secondLine = "Misión"
 
