--- a/saludPrevent.html
+++ b/saludPrevent.html
@@ -31,7 +31,7 @@
         data = {
               es: {
                   home: 'Inicio',
-                  mision: 'Mision',
+                  mision: 'Misión',
                   approach: 'Enfoque',
                   team: 'Equipo',
                   cases: 'Proyectos'
@@ -95,11 +95,10 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['case'];
-        var copete1 = '<p class="hidden">Dr. Jorge Belardi | Presidente ICBA</p><p class="last hidden">Mr. Peter Nicholas | Fundador de Boston Scientific</p>'
+        var copete1 = '<p class="hidde">Dr. Jorge Belardi | Presidente ICBA</p><p class="last hidde">Mr. Peter Nicholas | Fundador de Boston Scientific</p><br>'
         var copete2 = '<p class="last"></p>'
         var texto_iv = "<p>Al igual que en el área de salud, Salud Prevent participa en el desarrollo de una plataforma de educación y de terapia digital, que permite a los pacientes aprender a cuidarse más y mejor.</p>"
-        texto_iv += "<p>Esta solución busca mantener a las personas en la salud a través de la reeducación y el cambio de hábitos con el objetivo de mejorar la calidad de vida y disminuir el riesgo de enfermedades cardiovasculares que pueden llevar a la muerte. Reducir los factores de riesgo cardíacos no es un tema de tratamientos farmacológicos sino de cambio de hábitos y conocimiento aplicado al día a día. Dietas, ejercicio, reducir el estrés y otros puntos clave de los cambios de conductas, requieren un proceso de aprendizaje y educación.</p>" + '<img src="img/saludImg1.png" alt="" class="img1">' + copete1
-        texto_iv += "<p>Partiendo de la ciencia, desarrollamos una terapéutica digital que permite el monitoreo de poblaciones de riesgo y actuar a tiempo con programas a medida de cada individuo.<p/><p>Una de cada 3 personas morirán por causas cardiovasculares a nivel mundial y el rol de la educación puede reducir significativamente estas cifras.</p>"
+        texto_iv += "<p>Esta solución busca mantener a las personas en la salud a través de la reeducación y el cambio de hábitos con el objetivo de mejorar la calidad de vida y disminuir el riesgo de enfermedades cardiovasculares que pueden llevar a la muerte. Reducir los factores de riesgo cardíacos no es un tema de tratamientos farmacológicos sino de cambio de hábitos y conocimiento aplicado al día a día. Dietas, ejercicio, reducir el estrés y otros puntos clave de los cambios de conductas, requieren un proceso de aprendizaje y educación.</p>" + '<img src="img/saludImg1.png" alt="" class="img1">' + copete1 + "<p>Partiendo de la ciencia, desarrollamos una atención terapéutica digital que permite el monitoreo de poblaciones de riesgo y actuar a tiempo con programas a medida de cada individuo.</p>"
         
         var texto_en = '<p>As in the health area, Salud Prevent participates in the development of an education and digital therapy platform, which allows patients to patients learn to take care of themselves more and better.</p> <p>This solution seeks to keep people in health through reeducation and change of habits with the aim of improving the quality of life and decrease the risk of cardiovascular diseases that can lead to death. Reducing cardiac risk factors is not a matter of pharmacological treatments but of changing habits and knowledge applied to the day to day. Diets, exercise, reduce stress and other points key to behavioral changes require a process of learning and education.</p> <p>Starting from science, we develop a digital therapy that allows monitoring populations at risk and acting on time with programs tailored to each individual.</p> <p>One in 3 people will die of cardiovascular causes worldwide and the role of education can significantly reduce these figures.</p>'
 
