--- a/team.html
+++ b/team.html
@@ -62,7 +62,7 @@
     data = {
         es: {
             home: 'Inicio',
-            mision: 'Mision',
+            mision: 'Misión',
             approach: 'Enfoque',
             team: 'Equipo',
             cases: 'Proyectos'
@@ -130,7 +130,7 @@
           var position = 'PRESIDENT'
           var personName = 'Walter González'
           var text = ''
-          var redes = '<a>LinkedIn</a>'
+          var redes = '<a href="https://www.linkedin.com/in/walter-gonzalez-ab193721/" target="_blank">LinkedIn</a>'
   
           var data = {
             img: img,
@@ -205,7 +205,7 @@
     </script>
 
     <section class="teamPersons">
-      <div id="person1"></div><div id="person2"></div>
+      <div id="person1"></div><div id="person2"></div><div id="person3"></div><div id="person4"></div><div id="person5"></div><div id="person6"></div><div id="person7"></div>
 
       <script type="text/javascript">
         var navTemplate = Handlebars.templates['person'];
@@ -246,7 +246,7 @@
           var position = 'IM'
           var personName = 'Fabián Cassan'
           var text = 'Especialista en estrategias de inbound marketing para generar relaciones duraderas con los clientes.<br>'
-          var redes = '<a>LinkedIn</a>'
+          var redes = '<a href="https://www.linkedin.com/in/fabi%C3%A1n-cassan-51631911/" target="_blank">LinkedIn</a>'
 
           var text_en = 'Specialist in inbound marketing strategies to generate lasting relationships with clients.'
 
