--- a/cases.html
+++ b/cases.html
@@ -65,7 +65,7 @@
     data = {
         es: {
             home: 'Inicio',
-            mision: 'Mision',
+            mision: 'Misión',
             approach: 'Enfoque',
             team: 'Equipo',
             cases: 'Proyectos'
@@ -91,13 +91,13 @@
     <script type="text/javascript">
         var navTemplate = Handlebars.templates["cases"];
 
-        var title = 'Nos especializamos en tres pilares,<br>claves para el desarrollo del ser humano'
+        var title = 'Nos especializamos en tres pilares,<br>claves para el desarrollo del ser humano.'
         var readme_1_h4 = 'Salud'
-        var readme_1_p = 'Crear soluciones integrales<br>con foco en la prevención y en el<br>acceso de los pacientes<br>a tratamientos de alta complejidad '
+        var readme_1_p = 'Crear soluciones integrales<br>con foco en la prevención y en el<br>acceso de los pacientes<br>a tratamientos de alta complejidad.'
         var readme_2_h4 = 'Vivienda'
-        var readme_2_p = 'Desarrollo de red de asesores<br>y proyectos inmobiliarios,<br>que faciliten satisfacer las necesidades<br>habitacionales de nuestros clientes'
+        var readme_2_p = 'Desarrollo de red de asesores<br>y proyectos inmobiliarios,<br>que faciliten satisfacer las necesidades<br>habitacionales de nuestros clientes.'
         var readme_3_h4 = 'Educación'
-        var readme_3_p = 'Utilizar la tecnología digital y de<br>comunicación actual, para el<br>desarrollo de herramientas que<br>permitan educar a poblaciones con<br>el objetivo de mejorar su salud'
+        var readme_3_p = 'Utilizar la tecnología digital y de<br>comunicación actual, para el<br>desarrollo de herramientas que<br>permitan educar a poblaciones con<br>el objetivo de mejorar su salud.'
         var case_1 = 'Empresa líder en dispositivos médicos e innovación de origen europeo, con foco en la creación de soluciones terapéuticas de enfermedades Cardiovasculares y Neurovasculares.'
         var case_2 = 'WWC contribuye con C21 al desarrollo de proyectos y soluciones inmobiliarias innovadoras, integrales y ajustadas a las necesidades de sus clientes.'
         var case_3 = 'Contribuye a reducir complicaciones cardiológicas graves en pacientes de riesgo, a través de la educación y mejora de sus hábitos y conductas, actuando en la prevención. De igual manera brinda acceso a procedimientos de alta complejidad, creando alternativas de cobertura en instituciones de primer nivel como el ICBA.'
