--- a/century.html
+++ b/century.html
@@ -64,7 +64,7 @@
         data = {
             es: {
                 home: 'Inicio',
-                mision: 'Mision',
+                mision: 'Misión',
                 approach: 'Enfoque',
                 team: 'Equipo',
                 cases: 'Proyectos'
@@ -109,11 +109,8 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['case'];
-        var texto_iv = "<p>WWC trabaja en el asesoramiento de la franquicia americana Century 21 de bienes raíces. Al igual que la Salud, consideramos que la vivienda es una"
-        texto_iv += "necesidad básica de todos ser humano y por eso que es de nuestro interés.<br>"
-        texto_iv += "C21, fundada en 1971, es la red internacional de soluciones inmobiliarias con más reconocimiento a nivel mundial que busca mejorar y cambiar la vida"
-        texto_iv += "de las personas en relación a su vivienda. Experiencia, calidad y servicio han permitido que en 50 años tengan presencia en 83 países, con más de"
-        texto_iv += "10.000 oficinas y alrededor de 125.000 agentes en todo el mundo.</p>" + '<img src="img/centuryImg1.png" alt="" class="img1">'
+        var texto_iv = "<p>WWC trabaja en el asesoramiento de la franquicia americana Century 21 de bienes raíces. Ya que, al igual que la Salud, consideramos que la vivienda es una necesidad básica de todo ser humano, y por eso es de nuestro interés.</p>"
+        texto_iv += "<p>C21, fundada en 1971, es la red internacional de soluciones inmobiliarias con más reconocimiento a nivel mundial que busca mejorar y cambiar la vida de las personas en relación a su vivienda. Su experiencia, calidad y servicio han permitido que en 50 años tengan presencia en 83 países, con más de 10.000 oficinas y alrededor de 125.000 agentes en todo el mundo.</p>" + '<img src="img/centuryImg1.png" alt="" class="img1"><br>'
         texto_iv += "<p>WWC contribuye con C21 al desarrollo de proyectos y soluciones Inmobiliarias innovadoras, integrales y ajustadas a las necesidades de sus clientes, a través de un servicio de alta calidad y desarrollo de confianza, credibilidad y satisfacción por parte de nuestros asesores que nos permita consolidar relaciones de largo plazo.</p>"
         
         var texto_en = '<p>WWC works in advising the American Century 21 real estate franchise. Like Health, we consider that housing is a basic need of all to be human and that is why it is in our interest. C21, founded in 1971, is the international network of real estate solutions with the most worldwide recognition that seeks to improve and change life of people in relation to their home. Experience, quality and service have allowed them to have a presence in 83 countries in 50 years, with more than 10,000 offices and around 125,000 agents worldwide.</p> <p>WWC contributes with C21 to the development of innovative, comprehensive and adjusted Real Estate projects and solutions to the needs of its clients, through a high quality service and the development of trust, credibility and satisfaction on the part of our advisors that allows us to consolidate relationships for the long term.</p>' 
