--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       data = {
             es: {
                 home: 'Inicio',
-                mision: 'Mision',
+                mision: 'Misión',
                 approach: 'Enfoque',
                 team: 'Equipo',
                 cases: 'Proyectos'
