precarga ingles y tarjetas nuevas

--- a/approach.html
+++ b/approach.html
@@ -45,7 +45,7 @@
             }
 
         }
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('nav').innerHTML += navTemplate(data[language])
 
@@ -74,7 +74,7 @@
 
     }
 
-    var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+    var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
     document.getElementById('navResp').innerHTML += navTemplate(data[language])
@@ -108,7 +108,7 @@
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('approach_1').innerHTML += navTemplate(data[language])
     </script>
@@ -144,7 +144,7 @@
                 }
             }
 
-            var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+            var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
             document.getElementById('paso1').innerHTML += navTemplate(data[language])
@@ -175,7 +175,7 @@
                 }
             }
 
-            var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+            var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
             document.getElementById('paso2').innerHTML += navTemplate(data[language])
@@ -206,7 +206,7 @@
                 }
             }
 
-            var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+            var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
             document.getElementById('paso3').innerHTML += navTemplate(data[language])
@@ -234,7 +234,7 @@
               }
           }
   
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('form').innerHTML += footerTemplate(data[language])
       </script>
