--- a/century.html
+++ b/century.html
@@ -48,7 +48,7 @@
               }
   
           }
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('nav').innerHTML += navTemplate(data[language])
   
@@ -79,7 +79,7 @@
 
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('navResp').innerHTML += navTemplate(data[language])
@@ -161,7 +161,7 @@
             }            
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('proyectIvascular').innerHTML += navTemplate(data[language])
     </script>
@@ -186,7 +186,7 @@
               }
           }
   
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('form').innerHTML += footerTemplate(data[language])
       </script>
