--- a/ivascular.html
+++ b/ivascular.html
@@ -45,7 +45,7 @@
               }
   
           }
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('nav').innerHTML += navTemplate(data[language])
   
@@ -73,7 +73,7 @@
 
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('navResp').innerHTML += navTemplate(data[language])
@@ -146,7 +146,7 @@
             }            
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('proyectIvascular').innerHTML += navTemplate(data[language])
     </script>
@@ -171,7 +171,7 @@
               }
           }
   
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('form').innerHTML += footerTemplate(data[language])
       </script>
