--- a/mission.html
+++ b/mission.html
@@ -48,7 +48,7 @@
   
         }
   
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
         document.getElementById('nav').innerHTML += navTemplate(data[language])
   
@@ -76,7 +76,7 @@
 
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('navResp').innerHTML += navTemplate(data[language])
@@ -109,7 +109,7 @@
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('approach_1').innerHTML += navTemplate(data[language])
@@ -136,7 +136,7 @@
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('mission').innerHTML += navTemplate(data[language])
@@ -162,7 +162,7 @@
               }
           }
   
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('form').innerHTML += footerTemplate(data[language])
       </script>
