--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
 
       }
 
-      var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+      var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
       document.getElementById('nav').innerHTML += navTemplate(data[language])
 
@@ -78,7 +78,7 @@
 
     }
 
-    var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+    var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
     document.getElementById('navResp').innerHTML += navTemplate(data[language])
@@ -111,7 +111,7 @@
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('title_0').innerHTML += navTemplate(data[language])
@@ -167,7 +167,7 @@
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('teamContent').innerHTML += navTemplate(data[language])
@@ -199,7 +199,7 @@
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('title_1').innerHTML += navTemplate(data[language])
@@ -235,7 +235,7 @@
           }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('person1').innerHTML += navTemplate(data[language])
@@ -271,7 +271,7 @@
             }
           }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
         document.getElementById('person2').innerHTML += navTemplate(data[language])
@@ -314,7 +314,7 @@
         }
       }
 
-    var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+    var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
     document.getElementById('person3').innerHTML += navTemplate(data[language])
@@ -358,7 +358,7 @@
         }
       }
 
-    var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+    var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
     document.getElementById('person4').innerHTML += navTemplate(data[language])
@@ -402,7 +402,7 @@
       }
     }
 
-  var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+  var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
   document.getElementById('person5').innerHTML += navTemplate(data[language])
@@ -446,7 +446,7 @@
     }
   }
 
-var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
 document.getElementById('person6').innerHTML += navTemplate(data[language])
@@ -490,7 +490,7 @@ document.getElementById('person6').innerHTML += navTemplate(data[language])
     }
   }
 
-var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
 document.getElementById('person7').innerHTML += navTemplate(data[language])
@@ -519,7 +519,7 @@ document.getElementById('person7').innerHTML += navTemplate(data[language])
             }
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('form').innerHTML += footerTemplate(data[language])
     </script>
