--- a/cases.html
+++ b/cases.html
@@ -52,7 +52,7 @@
             }
 
         }
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('nav').innerHTML += navTemplate(data[language])
 
@@ -80,7 +80,7 @@
 
     }
 
-    var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+    var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
 
     document.getElementById('navResp').innerHTML += navTemplate(data[language])
@@ -142,7 +142,7 @@
 
         }
 
-        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+        var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
 
         document.getElementById('casesContetn').innerHTML += navTemplate(data[language])
     </script>
@@ -167,7 +167,7 @@
               }
           }
   
-          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+          var language = !localStorage.getItem('language') ? 'en' : localStorage.getItem('language')
   
           document.getElementById('form').innerHTML += footerTemplate(data[language])
       </script>
